kde-workspace (4:4.7.95-0r0) UNRELEASED; urgency=low

  * New upstream release.

  [ Eshat Cakar ]
  * Add myself to uploaders.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 04 Jan 2012 18:52:11 +0100

kde-workspace (4:4.7.4-1) experimental; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.7.4.
  * Bump shared-desktop-ontologies build dependency to 0.8.
  * The following dummy transitional packages are now in section "oldlibs":
    - kdebase-workspace
    - kdebase-workspace-bin
    - kdebase-workspace-dev
    - kdebase-workspace-dbg
  * Confirm symbols files on more architectures with the 4.7.2 build logs.

  [ Felix Geyer ]
  * kde-workspace recommends kmenuedit as it's in a separate package now.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 17 Dec 2011 23:27:58 +0100

kde-workspace (4:4.7.2-1) experimental; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.7.2.
  * Bump kdelibs5-dev build dependency to 4:4.7.
  * Bump kdepimlibs5-dev build dependency to 4:4.7.
  * Change the source package name from kdebase-workspace to kde-workspace in
    order to match upstream naming.
  * Rename the following binary packages to match upstream namimg:
    - kdebase-workspace -> kde-workspace
    - kdebase-workspace-bin -> kde-workspace-bin
    - kdebase-workspace-data -> kde-workspace-data
    - kdebase-workspace-dev -> kde-workspace-dev
    - kdebase-workspace-kgreet-plugins -> kde-workspace-kgreet-plugins
  * Manage the kdebase-runtime -> kde-runtime renaming:
    - Exclude kde-runtime instead of kdebase-runtime from dh_shlibdeps results.
    - kde-workspace-dbg depends on kde-runtime-dbg instead of
      kdebase-runtime-dbg.
  * Add the following dummy packages (which depend on kde-workspace-*):
    - kdebase-workspace
    - kdebase-workspace-bin
    - kdebase-workspace-dev