@@ -1,18 +1,18 @@
 --- a/libs/kworkspace/CMakeLists.txt
 +++ b/libs/kworkspace/CMakeLists.txt
-@@ -65,6 +65,7 @@ endif(WIN32)
+@@ -55,6 +55,7 @@ endif(WIN32)
  kde4_add_library(kworkspace ${LIB_MODE} ${kworkspace_LIB_SRCS})
  
  target_link_libraries(kworkspace  ${KDE4_KDEUI_LIBS} ${X11_LIBRARIES} ${KDE4_PLASMA_LIBS} )
 +target_link_libraries(kworkspace  LINK_INTERFACE_LIBRARIES ${KDE4_KDEUI_LIBRARY} )
  
- set_target_properties(kworkspace PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
+ set_target_properties(kworkspace PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} DEFINE_SYMBOL MAKE_KWORKSPACE_LIB)
  install(TARGETS kworkspace EXPORT kdeworkspaceLibraryTargets ${INSTALL_TARGETS_DEFAULT_ARGS} )
 --- a/libs/taskmanager/CMakeLists.txt
 +++ b/libs/taskmanager/CMakeLists.txt
-@@ -47,6 +47,7 @@ endif (X11_Xcomposite_FOUND)
- 
- target_link_libraries(taskmanager kephal kworkspace)
+@@ -50,6 +50,7 @@ if (NOT KDE_PLATFORM_FEATURE_BINARY_COMP
+     target_link_libraries(taskmanager kephal)
+  endif (NOT KDE_PLATFORM_FEATURE_BINARY_COMPATIBLE_FEATURE_REDUCTION)
  
 +target_link_libraries(taskmanager LINK_INTERFACE_LIBRARIES ${QT_QTGUI_LIBRARY} )
  set_target_properties(taskmanager PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
